0.0.2-alpha (2013-??-??)
	* Added: Elements parser.
	* Added: Struct parser.

0.0.1-alpha (2013-02-07)
	* First alpha release

Project started: 2012-11-13