@@ -5,40 +5,34 @@ namespace Sabre\XML\Element;
 use Sabre\XML;
 
 /**
- * 'Struct' parses out simple xml trees.
+ * 'KeyValue' parses out all child elements from a single node, and outputs a
+ * key=>value struct.
  *
  * Attributes will be removed, and duplicate child elements are discarded.
- * Elements with mixed text and child elements are also not supported, in those
- * cases the text will be discarded.
- *
- * For example, Struct will parse:
+ * Complex values within the elements will be parsed by the 'standard' parser.
+
+ * For example, KeyValue will parse:
  *
  * <?xml version="1.0"?>
  * <s:root xmlns:s="http://sabredav.org/ns">
- *   <s:elem1>
- *      <s:elem2>value2</s:elem2>
- *      <s:elem3>value3</s:elem3>
- *   </s:elem1>
- *   <s:elem4>value4</s:elem>
- *   <s:elem5 />
+ *   <s:elem1>value1</s:elem1>
+ *   <s:elem2>value2</s:elem2>
+ *   <s:elem3 />
  * </s:root>
  *
  * Into:
  *
  * [
- *   "{http://sabredav.org/ns}elem1" => [
- *      "{http://sabredav.org/ns}elem2" => "value2",
- *      "{http://sabredav.org/ns}elem3" => "value3",
- *   ],
- *   "{http://sabredav.org/ns}elem4" => "value4",
- *   "{http://sabredav.org/ns}elem5" => null,
+ *   "{http://sabredav.org/ns}elem1" => "value1",
+ *   "{http://sabredav.org/ns}elem2" => "value2",
+ *   "{http://sabredav.org/ns}elem3" => null,
  * ];
  *
  * @copyright Copyright (C) 2012-2013 Rooftop Solutions. All rights reserved.
  * @author Evert Pot (http://www.rooftopsolutions.nl/)
  * @license http://code.google.com/p/sabredav/wiki/License Modified BSD License
  */
-class Struct implements XML\Element {
+class KeyValue implements XML\Element {
 
     /**
      * Value to serialize
@@ -110,47 +104,22 @@ class Struct implements XML\Element {
 
         $values = [];
 
-        $stack = [&$values];
-
-        $currentValue = null;
-        $currentValue = &$values;
-
         do {
 
             $reader->read();
 
-            switch($reader->nodeType) {
+            if ($reader->nodeType === XML\Reader::ELEMENT) {
 
-                case XML\Reader::ELEMENT :
-                    if (!is_array($currentValue)) $currentValue = [];
-                    $clark = $reader->getClark();
-                    $currentValue[$clark] = null;
-                    if (!$reader->isEmptyElement) {
-                        // The stack gets higher
-                        $stack[] = &$currentValue[$clark];
-                        $currentValue = &$currentValue[$clark];
-                    }
-                    break;
-                case XML\Reader::TEXT :
-                    // We only do something with text, if there already was
-                    // text, or no value at all (null).
-                    if (is_null($currentValue)) {
-                        $currentValue = $reader->value;
-                    } elseif (is_string($currentValue)) {
-                        $currentValue.= $reader->value;
-                    }
-                    break;
-                case XML\Reader::END_ELEMENT :
-                    // Unwinding the stack.
-                    array_pop($stack);
-                    if (count($stack)>0) {
-                        $currentValue =& $stack[count($stack)-1];
-                    }
-                    break;
+                $clark = $reader->getClark();
+                if ($reader->isEmptyElement) {
+                    $values[$clark] = null;
+                } else {
+                    $values[$clark] = $reader->parseSubTree();
+                }
 
             }
 
-        } while (count($stack) > 0);
+        } while ($reader->nodeType !== XML\Reader::END_ELEMENT);
 
         return $values;
 
