@@ -1,6 +1,8 @@
 0.0.2-alpha (2013-??-??)
 	* Added: Elements parser.
-	* Added: Struct parser.
+	* Added: KeyValue parser.
+	* Change: Reader::parseTree now returns either a string (in case of a
+	  text-node), or an array (in the case there were child elements).
 
 0.0.1-alpha (2013-02-07)
 	* First alpha release
